tester/testsuite/bad/bad073.jl
// Void values do not exist.

int main() {
  -foo();
  !foo();
  return 1;
}

void foo() {
}
